# auto-commit

./: README.md  pyproject.toml  run.sh  tasks.md
scripts/: register_git_auto_commit_task.ps1  setup_windows_auto_commit.cmd  setup_windows_auto_commit.ps1  setup_windows_auto_commit.sh
src/git_auto_commit/: __init__.py  cli.py  service.py
tests/: test_service.py
